--- a/src/components/PersonDetail/styles.css
+++ b/src/components/PersonDetail/styles.css
@@ -1,40 +1,35 @@
 .personDetail {
   display: grid;
-  grid-template-columns: 20rem auto;
   grid-gap: 1.5rem;
+  grid-template-columns: 20rem auto;
 }
 
 .personDetail-img {
-  height: auto;
-  max-width: 100%;
-  width: 100%;
-}
-
-.personDetail-film {
-  display: grid;
-  grid-gap: 1.5rem;
-  grid-template-columns: 4rem auto;
-  margin-block-end: 1rem;
-  margin-block-start: 1rem;
-}
-
-.personDetail-film-img {
-  border-radius: 0.25rem;
-  height: auto;
+  height: 20rem;
   overflow: hidden;
-  width: 4rem;
+
+  & img {
+    height: 100%;
+    object-fit: cover;
+    width: 100%;
+  }
 }
 
-.personDetail-stats {
-  display: grid;
-  grid-template-columns: 8rem auto;
-  grid-gap: 1.5rem;
+.personDetail-films {
+  grid-column-end: 3;
+  grid-column-start: 1;
+  margin-block-start: 2rem;
+}
 
-  & dt {
-    font-weight: 700;
-  }
+.personDetail-title {
+  font-size: var(--u4);
+  font-weight: 300;
+  margin-block-end: 2rem;
+  margin-block-start: 0;
+}
 
-  & dd {
-    margin: 0;
-  }
+.personDetail-subtitle {
+  font-size: var(--u2);
+  font-weight: 700;
+  margin-block-start: 2rem;
 }
