--- a/src/styles/_root.scss
+++ b/src/styles/_root.scss
@@ -1,19 +1,24 @@
 :root {
   --black: 0, 0%, 0%;
-  --black-offset: 0, 0%, 6%;
+  --black-offset: 0, 0%, 15%;
+  --black-offset-2: 0, 0%, 25%;
   --white: 0, 0%, 100%;
   --white-offset: 0, 0%, 94%;
-  --active: #ff6500;
+  --white-offset-2: 0, 0%, 80%;
+  --interactive: 24, 90%, 45%;
 
   /* color */
   --fg: var(--black);
   --fg-offset: var(--black-offset);
+  --fg-offset-2: var(--black-offset-2);
   --bg: var(--white);
   --bg-offset: var(--white-offset);
+  --bg-offset-2: var(--white-offset-2);
 
   /* font */
   --sans: 'IBM Plex Sans', -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Helvetica', 'Arial',
     sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
+  --mono: 'DM Mono', monospace;
   --u18: 11.390625em;
   --u17: 9.950627481136905em;
   --u16: 8.692673779389363em;
@@ -53,4 +58,15 @@
 
   /* constants */
   --oneSheet: 1.5185185185; /* 27ʺ × 41ʺ */
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --fg: var(--white);
+    --fg-offset: var(--white-offset);
+    --fg-offset-2: var(--white-offset-2);
+    --bg: var(--black);
+    --bg-offset: var(--black-offset);
+    --bg-offset-2: var(--black-offset-2);
+  }
 }
