--- a/src/styles/components/_filmgrid.scss
+++ b/src/styles/components/_filmgrid.scss
@@ -15,8 +15,6 @@ $prefix: '' !default;
     flex-direction: column;
     color: hsl(var(--fg));
     text-decoration: none;
-    filter: grayscale(100%);
-    transition: filter 250ms linear;
 
     &::after {
       position: absolute;
@@ -27,10 +25,10 @@ $prefix: '' !default;
       justify-content: center;
       width: 1.5rem;
       height: 1.5rem;
-      color: hsl(var(--bg));
+      color: hsl(var(--white));
       font-weight: 700;
       font-size: var(--d3);
-      background: var(--active);
+      background: hsl(var(--interactive));
       border-radius: 50%;
       opacity: 0;
       content: attr(data-count);
@@ -40,12 +38,9 @@ $prefix: '' !default;
       opacity: 1;
     }
 
-    &:hover {
+    &:hover .#{$prefix}-filmgrid-crop {
+      opacity: 1;
       filter: grayscale(0%);
-
-      img {
-        opacity: 1;
-      }
     }
   }
 
@@ -70,6 +65,10 @@ $prefix: '' !default;
     overflow: hidden;
     border: 1px solid hsl(var(--fg));
     border-radius: 0.25rem;
+    transform: translateZ(0);
+    opacity: 0.6;
+    filter: grayscale(50%);
+    transition: opacity 250ms linear, filter 250ms linear;
   }
 
   &-img {
@@ -77,12 +76,23 @@ $prefix: '' !default;
     width: 100%;
     height: 100%;
     object-fit: cover;
-    opacity: 0.6;
-    transition: opacity 250ms linear;
+  }
+
+  &-year {
+    margin-top: 0.25rem;
+    margin-bottom: 0.25rem;
+    font-family: var(--mono);
+  }
+
+  &[data-skeleton] {
+    .#{$prefix}-filmgrid-card {
+      opacity: 1;
+      filter: none;
+    }
   }
 
   &[data-small] {
-    .ani-filmgrid-crop {
+    .#{$prefix}-filmgrid-crop {
       max-height: 120px;
     }
   }
