--- a/src/styles/components/_imagelink.scss
+++ b/src/styles/components/_imagelink.scss
@@ -1,22 +1,49 @@
 $prefix: '' !default;
 
 .#{$prefix}-imagelink {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  color: hsl(var(--interactive));
+  text-decoration: none;
 
   &-crop {
     display: inline-block;
     width: 2rem;
     height: 2rem;
+    margin-right: 0.5em;
     overflow: hidden;
     vertical-align: middle;
     border: 1px solid hsl(var(--fg));
     border-radius: 50%;
-    margin-inline-end: 0.75em;
+
+    &[data-placeholder] {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      background: hsl(var(--fg));
+    }
   }
 
   &-img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+
+  &-initials {
+    color: hsl(var(--bg));
+  }
+
+  // ----------
+  //  Modifiers
+  // ----------
+
+  &[data-small] {
+    font-size: var(--d2);
+
+    .#{$prefix}-imagelink-crop {
+      width: 1.25rem;
+      height: 1.25rem;
+    }
   }
 }
