--- a/src/styles/components/_persondetail.scss
+++ b/src/styles/components/_persondetail.scss
@@ -3,17 +3,25 @@ $prefix: '' !default;
 .#{$prefix}-persondetail {
   display: grid;
   grid-gap: 1.5rem;
-  grid-template-columns: 20rem auto;
+  grid-template-columns: calc(25% - 0.75rem) auto;
 
   &-img {
+    position: relative;
     height: 20rem;
     overflow: hidden;
     border: 1px solid hsl(var(--fg));
 
-    & img {
+    &::after {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      z-index: 10;
       width: 100%;
-      height: 100%;
-      object-fit: cover;
+      height: 50%;
+      background-image: linear-gradient(hsla(var(--bg), 0), hsla(var(--bg), 0.7));
+      background-size: 100% 100%;
+      content: '';
+      pointer-events: none;
     }
   }
 
@@ -21,6 +29,12 @@ $prefix: '' !default;
     grid-column-start: 1;
     grid-column-end: 3;
     margin-block-start: 2rem;
+  }
+
+  &-photo {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
   &-title {
