--- a/src/styles/components/_studiodetail.scss
+++ b/src/styles/components/_studiodetail.scss
@@ -3,21 +3,11 @@ $prefix: '' !default;
 .#{$prefix}-studiodetail {
   display: grid;
   grid-gap: 1.5rem;
-  grid-template-columns: 20rem auto;
+  grid-template-columns: calc(25% - 0.75rem) auto;
 
   &-films {
     grid-column-start: 1;
     grid-column-end: 3;
-  }
-
-  &-img {
-    height: 20rem;
-
-    & img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
   }
 
   &-title {
