--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -16,6 +16,7 @@
 @use "components/persondetail" with ($prefix: 'ani');
 @use "components/skeleton" with ($prefix: 'ani');
 @use "components/studiodetail" with ($prefix: 'ani');
+@use "components/unigrid" with ($prefix: 'ani');
 @use "components/wrapper" with ($prefix: 'ani');
 
 // utils
