--- a/src/styles/components/_animationgrid.scss
+++ b/src/styles/components/_animationgrid.scss
@@ -4,7 +4,11 @@ $prefix: '' !default;
   position: relative;
   display: grid;
   grid-gap: 1.5rem;
-  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  grid-template-columns: repeat(2, 1fr);
+
+  @media (min-width: 900px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
 
   &-artists {
     display: grid;
