--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,4 +1,5 @@
 body {
+  margin: 0;
   color: hsl(var(--fg));
   font-family: var(--sans);
   background: hsl(var(--bg));
@@ -20,10 +21,22 @@ p {
 }
 
 h1 {
+  font-weight: 400;
   font-size: var(--u4);
 }
 
 h2 {
   font-weight: 400;
   font-size: var(--u2);
+
+  sup {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 1.25em;
+    height: 1.25em;
+    font-size: var(--d5);
+    border: 1px solid currentColor;
+    border-radius: 50%;
+  }
 }
