--- a/src/styles/components/_filmdetail.scss
+++ b/src/styles/components/_filmdetail.scss
@@ -1,41 +1,22 @@
 $prefix: '' !default;
 
 .#{$prefix}-filmdetail {
-  display: grid;
-  grid-gap: 1.5rem;
-  grid-template-columns: 12rem auto;
-
   &-animations {
     margin-block-start: 3rem;
   }
 
+  &-details {
+    grid-column: span 2;
+
+    @media (min-width: 900px) {
+      grid-column: span 6;
+    }
+  }
+
   &-img {
+    grid-column: span 2;
     width: 100%;
     max-width: 100%;
     border: 1px solid hsl(var(--fg));
-  }
-
-  &-title {
-    font-weight: 300;
-    font-size: var(--u4);
-    margin-block-end: 0;
-    margin-block-start: 0;
-  }
-
-  &-subtitle {
-    font-size: var(--u3);
-    margin-block-end: 1rem;
-    margin-block-start: 1rem;
-
-    sup {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      width: 1.25em;
-      height: 1.25em;
-      font-size: var(--d5);
-      border: 1px solid currentColor;
-      border-radius: 50%;
-    }
   }
 }
