--- a/src/styles/components/_persondetail.scss
+++ b/src/styles/components/_persondetail.scss
@@ -1,12 +1,17 @@
 $prefix: '' !default;
 
 .#{$prefix}-persondetail {
-  display: grid;
-  grid-gap: 1.5rem;
-  grid-template-columns: calc(25% - 0.75rem) auto;
+  &-details {
+    grid-column: span 2;
+
+    @media (min-width: 900px) {
+      grid-column: span 6;
+    }
+  }
 
   &-img {
     position: relative;
+    grid-column: span 2;
     height: 20rem;
     overflow: hidden;
     border: 1px solid hsl(var(--fg));
@@ -35,18 +40,5 @@ $prefix: '' !default;
     width: 100%;
     height: 100%;
     object-fit: cover;
-  }
-
-  &-title {
-    font-weight: 300;
-    font-size: var(--u4);
-    margin-block-end: 2rem;
-    margin-block-start: 0;
-  }
-
-  &-subtitle {
-    font-weight: 700;
-    font-size: var(--u2);
-    margin-block-start: 2rem;
   }
 }
