--- a/src/components/AnimationGrid.module.scss
+++ b/src/components/AnimationGrid.module.scss
@@ -1,6 +1,4 @@
-$prefix: '' !default;
-
-.#{$prefix}-animationgrid {
+.animationgrid {
   position: relative;
   display: grid;
   grid-gap: 1.5rem;
